# autohive

./: .flake8  .gitignore  .gitlint  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
autohive/: __init__.py  board.py  game.py  pieces.py  player.py
src/hivegame/: setup.py
src/hivegame/src/hivegame/: __init__.py  __main__.py  board.py  game.py  pieces.py  player.py
