[tool.poetry]
name = "autohive"
version = "0.1.0"
description = "Implementing the board game Hive to use as an AI Sandbox"
authors = ["Anshul Kanakia <anshul.p.kanakia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
ipykernel = "^6.4.1"
jupyter = "^1.0.0"
notebook = "^6.4.4"
pre-commit = "^2.20.0"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
gitlint = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
